--- a/ModelPage.html
+++ b/ModelPage.html
@@ -231,7 +231,7 @@
 <body>
 
     <div class="header">
-        <a href="Home.html" class="home-button">
+        <a href="index.html" class="home-button">
             <img src="https://img.icons8.com/ios-filled/50/000000/home.png" alt="home">
             กลับสู่หน้าHome
         </a>
