--- a/SearchPage.html
+++ b/SearchPage.html
@@ -321,7 +321,7 @@
             { name:"ฝุ่น", category: "ขยะเปียก", image: "image/ฝุ่น.jpg", instructions: "คำแนะนำ: โปรดหลีกเลี่ยงการทิ้งขยะอินทรีย์ในถุงพลาสติกเพื่อการย่อยสลายที่ดี" },
             { name:"ใบไม้และกิ่งไม้", category: "ขยะเปียก", image: "image/ใบไม้.jpeg", instructions: "คำแนะนำ: โปรดหลีกเลี่ยงการทิ้งขยะอินทรีย์ในถุงพลาสติกเพื่อการย่อยสลายที่ดี" },
             { name:"เศษผม", category: "ขยะเปียก", image: "image/ผม.png", instructions: "หลีกเลี่ยงการทิ้งขยะอินทรีย์ในถุงพลาสติกเพื่อการย่อยสลายที่ดี" },
-            { name:"ขนสัตว์", category: "ขยะเปียก", image: "image/ขน.jpg", instructions: "เพิ่มเติม:ขนสัตว์,ขนแมว,ขนสุนัข<br>หลีกเลี่ยงการทิ้งขยะอินทรีย์ในถุงพลาสติกเพื่อการย่อยสลายที่ดี" },
+            { name:"ขนสัตว์", category: "ขยะเปียก", image: "image/ขน.JPG", instructions: "เพิ่มเติม:ขนสัตว์,ขนแมว,ขนสุนัข<br>หลีกเลี่ยงการทิ้งขยะอินทรีย์ในถุงพลาสติกเพื่อการย่อยสลายที่ดี" },
             { name:"ดอกไม้", category: "ขยะเปียก", image: "image/ดอกไม้.jpg", instructions: "ถ้ามีหนังสางหรือพลาสติก โปรดแยกก่อนทิ้ง <br>หลีกเลี่ยงการทิ้งขยะอินทรีย์ในถุงพลาสติกเพื่อการย่อยสลายที่ดี" },
 
 
