--- a/TeachPage.html
+++ b/TeachPage.html
@@ -185,7 +185,7 @@
         }
 
         .section ul li::before {
-            content: '🔻';
+            content: '🌱';
             font-size: 1.2em;
             position: absolute;
             left: 0;
