--- a/AboutPage.html
+++ b/AboutPage.html
@@ -128,7 +128,7 @@
             color: #4CAF50; 
             margin-top: 30px;
             margin-bottom: 15px;
-            border-bottom: 2px solid #EEE;
+            border-bottom: 2px solid #EEE;/* ขีดเส้นใต้คำเพิ่มความน่าเชื่อถือ */
             padding-bottom: 5px;
         }
 
@@ -149,13 +149,12 @@
         }
 
         .container ul li::before {
-            content: "\f00c";
-            font-family: "Font Awesome 5 Free";
-            font-weight: 900;
+            content: '🐛';
+            font-size: 1.2em;
             position: absolute;
             left: 0;
-            top: 0;
-            color: #28a745;
+            top: 2px;
+            font-weight: normal;
         }
 
         .developer-info {
