--- a/AboutPage.html
+++ b/AboutPage.html
@@ -148,7 +148,7 @@
             margin-bottom: 10px;
         }
 
-        .container ul li::after {
+        .container ul li::before {
             content: '🐛';
             font-size: 1.2em;
             position: absolute;
