--- a/ModelPage.html
+++ b/ModelPage.html
@@ -256,7 +256,7 @@
             </div>
 
             <div id="predictionContainer">
-                <p>กรุณาอัปโหลดรูปภาพ หรือใช้กล้องเพื่อจำแนกประเภทขยะของคุณ</p>
+                <!-- <p>กรุณาอัปโหลดรูปภาพ หรือใช้กล้องเพื่อจำแนกประเภทขยะของคุณ</p> -->
             </div>
             <div id="statusMessage" class="loading-message"></div>
 
