--- a/ModelPage.html
+++ b/ModelPage.html
@@ -249,9 +249,9 @@
                     <button id="useCameraButton">
                         <i class="fas fa-camera"></i> ใช้กล้อง
                     </button>
-                    <button id="classifyButton" disabled>
+                    <!-- <button id="classifyButton" disabled>
                         <i class="fas fa-search"></i> จำแนกประเภท
-                    </button>
+                    </button> -->
                 </div>
             </div>
 
