--- a/AboutPage.html
+++ b/AboutPage.html
@@ -194,7 +194,7 @@
             <h3>ทำไมถึงตั้งชื่อว่า "เพื่อนแยกขยะ"</h3>
             <p>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"เพื่อนแยกขยะ" ถูกตั้งชื่อขึ้นมาเพื่อเหมือนเพื่อนที่ช่วยในการแยกขยะอย่างถูกต้อง
-                โดยไม่เป็นการทำให้รู้สึกเหมือนการใช้เครื่องมือหรือระบบอัตโนมัติ แต่เป็นการใช้ "เพื่อน" ที่คอยช่วยเหลือในเรื่องการแยกขยะและให้คำแนะนำ
+                โดยไม่เป็นการทำให้รู้สึกเหมือนการใช้เครื่องมืออัตโนมัติ แต่เป็นการใช้ "เพื่อน" ที่คอยช่วยเหลือในเรื่องการแยกขยะและให้คำแนะนำ
             </p>
 
             <h3>ความสำคัญของ "เพื่อนแยกขยะ"</h3>
