--- a/ModelPage.html
+++ b/ModelPage.html
@@ -301,7 +301,7 @@
             'cardboard': { bin: 'ขยะรีไซเคิล', instruction: 'พับให้แบน ทิ้งถังขยะรีไซเคิล หรือทำการรวบรวมเพื่อนำไปขายที่ร้านของเก่าเพื่อเพิ่มรายได้ได้' },
             'diaper': { bin: 'ขยะทั่วไป/เฉพาะ', instruction: 'ทิ้งในถังขยะที่รองรับผ้าอนามัย/ผ้าอ้อมโดยเฉพาะ หรือถังขยะทั่วไป ผ้าอนามัยหรือผ้าอ้อม ควรทำการห่อให้มิดชิดก่อนทิ้งลงถังขยะ' },
             'light': { bin: 'ขยะอันตราย', instruction: 'ทิ้งจุดรับขยะอันตราย <br>1.ห่อหลอดไฟด้วยปลอกกระดาษหรือกระดาษหนังสือพิมพ์หลายชั้น <br>2.หากเป็นหลอดกลมหรือหลอดตะเกียบ ให้ใส่ถุงหรือกล่องเพิ่ม <br>3.ติดป้ายว่า “หลอดไฟใช้แล้ว” ให้เจ้าหน้าที่เห็นชัดเจนก่อนทิ้งลงถังขยะอันตราย  <br>!แต่สำหรับหลอดแอลอีดี สามารถทิ้งถังขยะรีไซเคิลได้เลย' },
-            'paper': { bin: 'ขยะรีไซเคิล/รีไซเคิลกรณีLED', instruction: 'แยกตามประเภท (กระดาษขาว, กล่อง, หนังสือพิมพ์) ทิ้งถังขยะรีไซเคิล หรือทำการรวบรวมเพื่อนำไปขายที่ร้านของเก่าเพื่อเพิ่มรายได้ได้' },
+            'paper': { bin: 'ขยะรีไซเคิล', instruction: 'แยกตามประเภท (กระดาษขาว, กล่อง, หนังสือพิมพ์) ทิ้งถังขยะรีไซเคิล หรือทำการรวบรวมเพื่อนำไปขายที่ร้านของเก่าเพื่อเพิ่มรายได้ได้' },
             'metal': { bin: 'ขยะรีไซเคิล', instruction: 'ทำความสะอาด ทิ้งถังขยะรีไซเคิล หรือทำการรวบรวมเพื่อนำไปขายที่ร้านของเก่าเพื่อเพิ่มรายได้ได้' },
             'mask': { bin: 'ขยะติดเชื้อ', instruction: 'พับหน้ากาก ให้ส่วนที่สัมผัสใบหน้าดูด้านใน ม้วนสายรัดแล้วพันรอบหน้ากาก ใส่ถุงพลาสติก มัดปากถุงให้แน่นถังขยะที่มีฝาปิดทิ้งถังขยะติดเชื้อ' },
             'ewaste': { bin: 'ขยะอิเล็กทรอนิกส์', instruction: 'ทิ้งจุดรับขยะอิเล็กทรอนิกส์' },
