--- a/ModelPage.html
+++ b/ModelPage.html
@@ -242,7 +242,7 @@
         <div class="container">
             <h1 class="container-title">จำแนกประเภทขยะของคุณ</h1>
             <div class="controls">
-                <label for="imageUpload">เลือกไฟล์รูปภาพ หรือใช้กล้อง:</label>
+                <label for="imageUpload">เลือกไฟล์รูปภาพ หรือใช้กล้อง</label>
                 <input type="file" id="imageUpload" accept="image/*">
 
                 <div class="button-group">
