--- a/SearchPage.html
+++ b/SearchPage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ทิ้งอย่างไรให้ได้ประโยชน์สูงสุด!</title>
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;700&family=Sarabun:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <style>
         
         * {
@@ -301,7 +302,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <span id="modalTitle"></span>
-                <span class="modal-close" onclick="closeModal()">&times;</span>
+                <i class="fa-solid fa-square-xmark modal-close" onclick="closeModal()"></i>
             </div>
             <div id="modalInstructions"></div>
         </div>
