--- a/TeachPage.html
+++ b/TeachPage.html
@@ -498,7 +498,7 @@
     </div>
 
     <div class="footer">
-        <p>แหล่งอ้างอิง:</p>
+        <p>แหล่งอ้างอิง</p>
         <a href="https://sustainability.ais.co.th/th/update/e-waste/788/what-is-ewaste" class="source-link" target="_blank">sustainability.ais.co.th - E-Waste</a>
         <a href="https://krabi-khodin.go.th/public/list/data/detail/id/3223/menu/1554" class="source-link" target="_blank">krabi-khodin.go.th - ขยะติดเชื้อ</a>
         <a href="https://www.lalinproperty.com/lalinsociety/type-of-trash-bin/" class="source-link" target="_blank">lalinproperty.com - ประเภทถังขยะ</a>
