--- a/ModelPage.html
+++ b/ModelPage.html
@@ -494,7 +494,7 @@ async function startCamera() {
             }
         }
 
-        
+        // แนบรูป
         imageUpload.addEventListener('change', function(event) {
             stopCamera(); // หยุดกล้องถ้ามีการเลือกไฟล์
             const file = event.target.files[0];
