--- a/TeachPage.html
+++ b/TeachPage.html
@@ -203,7 +203,7 @@
             color: #666;
             padding-left: 25px;
         }
-
+            /* เพิ่ม bullet สักหน่อยเพื่อความสวยงาม */
         .section ul li ul li::before {
             content: '-';
             font-size: 1.1em;
